--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,16 @@
 {
-  "name": "healthy-gulp-angular",
+  "name": "protoTable",
   "version": "0.0.0",
   "authors": "",
   "private": true,
   "dependencies": {
-    "angular": "^1.3.12",
-    "angular-ui-router": "^0.2.11",
-    "angular-animate": "^1.3.0",
+    "angular": "~1.5",
+    "angular-animate": "~1.5",
+    "angular-bootstrap": "~2.5",
+    "angular-touch": "~1.5",
+    "angular-xeditable": "~0.8.1",
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "~3.3.7",
     "foundation": "~5.5.1"
   },
   "devDependencies": {
