--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "repository": "",
   "devDependencies": {
+    "angular-ui-bootstrap": "2.5.6",
     "body-parser": "^1.5.2",
     "bower": "^1.3.1",
     "del": "^1.1.1",
@@ -24,7 +25,7 @@
     "gulp-order": "^1.1.1",
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.2",
+    "gulp-less": "^3.0.5",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
     "jshint-stylish": "^1.0.0",
